well that didn't work

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./remove-duplicates-from-a-sorted-array.js"></script>
+    <script src="./palindrome-number.js"></script>
 </body>
 </html>
